Fixed alignment

--- a/style-guide/page-component/ExecutiveWingMembers/executivewingmembers.module.css
+++ b/style-guide/page-component/ExecutiveWingMembers/executivewingmembers.module.css
@@ -117,6 +117,8 @@
   -ms-grid-column-align: center;
   justify-self: center;
   -ms-flex-item-align: start;
+  margin-left: 1rem;
+  margin-top: 1rem;
   align-self: flex-start;
   height: 20vw;
   width: 20vw;
